--- a/index.html
+++ b/index.html
@@ -4,24 +4,26 @@
 <html>
 <head>
   <title>Capital City, Country, River</title>
-  <script type="text/javascript" src="./js/app.js"></script>
   <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
 
 <h1>Capital City, Country, River</h1>
-<button id="randLetterGenerator" name="Generate random letter"></button>
-<div>Display random character</div>
-<form>
+<button id="letterGenerator" name="Generate random letter"></button>
+<p id="test"></p>
+
+<form id="target" name="formQuiz">
   Capital City:
-  <input type="text" id="capital_City">
+  <input type="text" name="capitalCity" value="" id="capital_City">
   Country:
-  <input type="text" id="country">
-  River:
-  <input type="text" id="river">
-  <input type="submit" value="Submit">
+  <input type="text" name="country"value="" id="country">
+  Currency:
+  <input type="text" name="currency" value="" id="currency">
+  <input type="submit" id ="submitForm" value="Submit">
 </form>
 
 <div>Display score: </div>
-</body>
+</body>  
+<script type="text/javascript" src="./js/app.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </html>
