--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Capital City, Country, River</title>
+  <title>Capital City, Country, Currency</title>
   <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
 
-<h1>Capital City, Country, River</h1>
+<h1>Capital City, Country, Currency</h1>
 <button id="letterGenerator" name="Generate random letter"></button>
 <p id="test"></p>
+
+<div>Timer</div>
+
 
 <form id="target" name="formQuiz">
   Capital City:
@@ -22,8 +25,9 @@
   <input type="submit" id ="submitForm" value="Submit">
 </form>
 
-<div>Display score: </div>
+<div id="displayScoreId" value=""></div>
 </body>  
-<script type="text/javascript" src="./js/app.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="./js/app.js"></script>
+
 </html>
