--- a/index.html
+++ b/index.html
@@ -4,30 +4,36 @@
 <html>
 <head>
   <title>Capital City, Country, Currency</title>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,900,300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="./css/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="./js/app.js"></script>
 </head>
 <body>
+  <header>
+    <h1>Capital, Country, Currency</h1>
+  </header>
+  <main>  
+    <button id="letterGenerator" name="Generate random letter"></button>
+    <p id="test"></p>
 
-<h1>Capital City, Country, Currency</h1>
-<button id="letterGenerator" name="Generate random letter"></button>
-<p id="test"></p>
+    <div id="countdown"></div>
+    <div id="displayScoreId" value=""></div>
 
-<div>Timer</div>
+    <form id="target" name="formQuiz">
+      <label for="capitalCity">Capital City:</label>
+      <input class="capital" type="text" name="capitalCity" value="" id="capital_City">
 
+      <label for="country">Country:</label>
+      <input class="country" type="text" name="country"value="" id="country">
 
-<form id="target" name="formQuiz">
-  Capital City:
-  <input type="text" name="capitalCity" value="" id="capital_City">
-  Country:
-  <input type="text" name="country"value="" id="country">
-  Currency:
-  <input type="text" name="currency" value="" id="currency">
-  <input type="submit" id ="submitForm" value="Submit">
-</form>
+      <label for="currency">Currency:</label>
+      <input class="currency" type="text" name="currency" value="" id="currency">
 
-<div id="displayScoreId" value=""></div>
-</body>  
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script type="text/javascript" src="./js/app.js"></script>
+      <input type="submit" id="submitForm" value="Submit">
+    </form>
+  </main>
+  <footer>&copy; Pritpal Plc. 2015</footer>
 
+</body>
 </html>
