Adjustments made in index.html to align to app.js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Capital, Country, Currency</h1>
   </header>
   <main>  
-    <button id="letterGenerator" name="Generate random letter"></button>
+    <button id="letterGenerator" name="Generate random letter">Play Game</button>
     <p id="test"></p>
 
     <div id="countdown"></div>
