Changed id names for tags

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <h1>Capital, Country, Currency</h1>
   </header>
   <main>  
-    <button id="letterGenerator" name="Generate random letter">Play Game</button>
-    <p id="test"></p>
+    <button id="playGameId">Play Game</button>
+    <p id="randomLetterDisplayId"></p>
 
     <div id="countdown"></div>
     <div id="displayScoreId" value=""></div>
 
-    <form id="target" name="formQuiz">
+    <form id="formId" name="formQuiz">
       <label for="capitalCity">Capital City:</label>
       <input class="capital" type="text" name="capitalCity" value="" id="capital_City">
 
@@ -33,7 +33,7 @@
       <input type="submit" id="submitForm" value="Submit">
     </form>
   </main>
-  <footer>&copy; Pritpal Plc. 2015</footer>
+  <footer>&copy; PSB Plc. 2015</footer>
 
 </body>
 </html>
