Adding the player turns to the game

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
   </header>
   <main>  
     <button id="playGameId">Play Game</button>
-    <p id="randomLetterDisplayId"></p>
     <p id="playerTurnsDisplayId"></p>
+     <p id="randomLetterDisplayId"></p>
+    
 
     <div id="countdownId"></div>
-    <div id="displayScoreId" value=""></div>
+    <div id="displayScoreP1Id" value=""></div>
+    <div id="displayScoreP2Id" value=""></div>
 
     <form id="formId" name="formQuiz">
       <label for="capitalCity">Capital City:</label>
