--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,900,300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="./css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="./js/lists.js"></script>
   <script type="text/javascript" src="./js/app.js"></script>
 </head>
 <body>
@@ -12,14 +13,13 @@
     <h1>Capital, Country, Currency</h1>
   </header>
   <main>  
-    <button id="playGameId">Play Game</button>
+    <button id="startRound">Start Next Round</button>
     <p id="playerTurnsDisplayId"></p>
-     <p id="randomLetterDisplayId"></p>
+    <p id="randomLetterDisplayId"></p>
     
-
-    <div id="countdownId"></div>
-    <div id="displayScoreP1Id" value=""></div>
-    <div id="displayScoreP2Id" value=""></div>
+    <div id="countdown">Start next round!</div>
+    <div id="player1score"></div>
+    <div id="player2score"></div>
 
     <form id="formId" name="formQuiz">
       <label for="capitalCity">Capital City:</label>
