Final Version Ready

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
     <button id="startRound">Start Next Round</button>
     <p class="animated infinite pulse" id="randomLetterDisplayId"></p>
     
-    <div id="countdown"></div> <!--- start new game -->
+    <div id="countdown"></div>
     <div id="player1score"></div>
     <div id="player2score"></div>
 
